<resources>
    <string name="app_name">星享-明星端</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">请稍后...</string>
    <string name="reload">重新尝试</string>
    <string name="get_note_code">获取验证码</string>
    <string name="retrieve_password_1">忘记密码？</string>
    <string name="js_bridge">NIM JS Bridge</string>
    <string name="file_browser">文件浏览器</string>
    <string name="identity_tip">您还没有身份验证</string>
    <string name="identity_tip_msg">您需要进行身份验证,\n之后才可以进行明星时间交易。</string>
    <string name="start_verification">开始验证</string>
    <string name="about">关于</string>
    <string name="heard_num">听过 %1$d</string>
    <string name="look_num">观看 %1$d</string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="readed">已读</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2017 网易公司版权所有</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="often_error">操作频繁，请稍后再试</string>
    <string name="open_pay">开通支付</string>
    <string name="open_pay_agree">我知道了</string>
    <string name="open_pay_des">需要开通支付才能进行充值等相关操作。开通支付后，可以在求购、转让、约见、分答功能中使用钱包消费。</string>
    <string name="input_pay_pwd">请输入交易密码</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="money_bag_detail">钱包明细</string>
    <string name="bank_info">银行卡</string>
    <string name="user_recharge">充值</string>
    <string name="recharge_ali_pay">支付宝支付</string>
    <string name="recharge_wxpay">微信支付</string>
    <string name="recharge_money">充值金额</string>
    <string name="input_recharge_money">手动输入充值金额</string>
    <string name="choose_recharge_money">选择充值额度</string>
    <string name="recharge_money1">1元</string>
    <string name="recharge_money2">10元</string>
    <string name="recharge_money3">100元</string>
    <string name="recharge_money4">1000元</string>
    <string name="recharge_money5">10000元</string>
    <string name="recharge_money6">50000元</string>
    <string name="booking_star_list">预约名单</string>
    <string name="have_talk">聊一聊</string>
    <string name="service_center">客服中心</string>
    <string name="service_weixin">客服微信</string>
    <string name="choose_pay_type">请选择付款方式</string>
    <string name="no_bind_bank_tips">您还没有绑定银行卡</string>
    <string name="bind_bank_now">立即绑定</string>
    <string name="bind_bank_tips">\t\t\t\t需要绑定银行卡才能进行充值等相关操作。绑定银行卡后，可以在预售、购买、兑换时、用该银行卡进行交易。</string>
    <string name="booking_time_status">约见时间 %1$s</string>
    <string name="bank_end_number">%1$s    尾号%2$s</string>
    <string name="money_cash">提现</string>
    <string name="cash_user_account">收款账户</string>
    <string name="cash_history">提现记录</string>
    <string name="cash_money">提现金额</string>
    <string name="cash_sign">¥</string>
    <string name="cash_available_money">可提金额¥ %1$s，</string>
    <string name="cash_all_money">全部提现</string>
    <string name="bank_card_user">持卡人</string>
    <string name="bank_card_number">卡号</string>
    <string name="input_card_number">请输入您的卡号</string>
    <string name="input_card_phone">请输入您的预留手机号</string>
    <string name="input_card_code">请输入验证码</string>
    <string name="input_card_prov">请输入开户省</string>
    <string name="input_card_city">请输入开户市</string>
    <string name="phone_number_bank">手机号</string>
    <string name="phone_code_bank">验证码</string>
    <string name="prov_bank">开户省</string>
    <string name="city_bank">开户市</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="forget_deal_pwd">忘记交易密码</string>
    <string name="name_code">%1$s (%2$s)</string>
    <string name="reset_login_pwd">重置登录密码</string>
    <string name="reset_pay_pwd">重置交易密码</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="no_register">还没有账户</string>
    <string name="had_account">已有账户</string>
    <string name="register">现在注册</string>
    <string name="loging">现在登录</string>
    <string name="other_login">第三方登录</string>
    <string name="wei_xin_login">微信登录</string>
    <string name="title_welcome_1">星享，</string>
    <string name="title_welcome_2">你与明星零距离</string>
    <string name="news_info_title">资讯</string>
    <string name="sample_heard_layout">头布局</string>
    <string name="regiset_put_note_code">输入系统验证码</string>
    <string name="put_account_number">请输入账号</string>
    <string name="put_password_number">请输入6位以上密码</string>
    <string name="regiset_phone_number">输入您的手机号</string>
    <string name="retrieve_password_2">点击找回</string>
    <string name="butten_register">注册</string>
    <string name="butten_loging">登录</string>
    <string name="butten_reset_psd">重置登录密码</string>
    <string name="again_reset_psd">重新输入登录密码</string>
    <string name="check_famous_address_book">查看名人通讯录</string>
    <string name="famous_address_book">名人通讯录</string>
    <string name="diff_answer">星聊</string>
    <string name="ming_xing">明星</string>
    <string name="number_80004">8004</string>
    <string name="search_hint">搜索发行人代码或名称</string>
    <string name="search_star_result_1">(</string>
    <string name="search_star_result_2">)</string>
    <string name="option">自选</string>
    <string name="user_total_assets">资产总额</string>
    <string name="user_buyed_star">已购明星</string>
    <string name="end_times">距离结束还有</string>
    <string name="fans_talk">粉丝聊天</string>
    <string name="custom_audio_talk">定制语音</string>
    <string name="fans_interaction">粉丝互动</string>
    <string name="video_fans_ask">视频问答</string>
    <string name="contact_fans">联系粉丝</string>
    <string name="ask_fans">粉丝问答</string>
    <string name="meeting_type">约见类型</string>
    <string name="meeting_order">约见订单</string>
    <string name="meeting_type_tips">Tips：未确认的都将视为不同意此约见类型，否则粉丝无法正常约见您。</string>
    <string name="meeting_address_time_tips">Tips：约见时间最长不能超过今年。例如不能超出起始2017-01-01结束2017-12-31的范围。</string>
    <string name="meeting_time">%1$s-%2$s-%3$s</string>
    <string name="meeting_detail_time">时间:  %1$s</string>
    <string name="meeting_detail_please">地点:  %1$s</string>
    <string name="meeting_detail_type">约见类型:  %1$s</string>
    <string name="meeting_detail_additional">约见补充:  %1$s</string>
    <string name="meeting_detail_agree">同意</string>
    <string name="turnover_acount">成交总数</string>
    <string name="turnover_acount_week">一周交易数据</string>
    <string name="deal_date">交易日期</string>
    <string name="turnover_date">成交日期</string>
    <string name="turnover_count">成交总数</string>
    <string name="time_count">时间总数</string>
    <string name="order_total_money">订单总金额</string>
    <string name="income_money_today_">当天收益（元）</string>
    <string name="today_price">今开  %1$s</string>
    <string name="yestoday_price">昨收  %1$s</string>
    <string name="turnover_total_count">成交总数</string>
    <string name="total_time_count">时间总数</string>
    <string name="add_pic_tips">Tips：当前只能添加一张图片。</string>
    <string name="add_pic">添加图片</string>
    <string name="remainder_input_count">%1$s/200</string>
    <string name="input_your_idea">这一刻的想法...</string>
    <string name="setting_pwd_tip">为保障您的交易安全，请设置交易密码。</string>
    <string name="setting_next">下一步</string>
    <string name="setting_pay_pwd">设置交易密码</string>
    <string name="setting_pay_pwd2">请确认交易密码</string>
    <string name="disclaimer_title">免责声明</string>
    <string name="disclaimer">\t\t\t\t在使用本系统的所有功能之前，请您务必仔细阅读并透彻理解本声明。
        您可以选择不使用本系统，但如果您使用本系统，您的使用行为将被视为对本声明全部内容的认可。\n\t\t\t\t免责声明： 鉴于本系统使用非人工检索/分析方式，
        无法确定您输入的条件进行是否合法，所以本系统对检索/分析出的结果不承担责任。
        如果因以本系统的检索/分析结果作为任何商业行为或者学术研究的依据而产生不良后果，本系统不承担任何法律责任。
        \n\t\t\t\t关于隐私权： 访问者在本系统注册时提供的一些个人资料，本系统除您本人同意外不会将用户的任何资料以任何方式泄露给第三方。当政府部门、司法机关等依照法定程序要求本系统披露个人资料时，本系统将根据执法单位之要求或为公共安全之目的提供个人资料，在此情况下的披露，本系统不承担任何责任。</string>
    <string name="login_out">退出登录</string>
    <string name="star_booking">约见</string>
    <string name="star_refuse">已拒绝</string>
    <string name="me_agree">我已同意</string>
    <string name="disclaimer_text">《免责声明》</string>
    <string name="recharge_info">充值方式</string>
    <string name="make_sure">确定</string>
    <string name="spend_times">消耗时间 %1$s 秒</string>
    <string name="meeting_manager">约见管理</string>
    <string name="time_address_manager">地址时间管理</string>
    <string name="star_meet_type">%1$s ,%2$s</string>
    <string name="star_meet_detail">约见详情</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="user_asset_manage">资产管理</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
</resources>