<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_30"
    android:layout_marginLeft="@dimen/dp_12"
    android:layout_marginRight="@dimen/dp_12"
    android:layout_marginTop="@dimen/dp_40"
    android:background="@drawable/booking_star_status"
    android:gravity="center_vertical"
    tools:showIn="@layout/fragment_income_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/turnover_date"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/turnover_count"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time_count"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/order_total_money"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_size_14" />
</LinearLayout>

            