<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fafafa"
    android:orientation="vertical">

    <com.cloudTop.starshare.widget.NormalTitleBar
        android:id="@+id/nt_title"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/color_FB9938"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_35"
            android:text="@string/income_money_today_"
            android:textColor="@color/main_bg_color"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/star_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:textColor="@color/main_bg_color"
            android:textSize="@dimen/text_size_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_today_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_price"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_size_14" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/dp_15"
                android:layout_marginLeft="30dp"
                android:background="@color/color_ffffff" />

            <TextView
                android:id="@+id/tv_yesToday_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:text="@string/yestoday_price"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_25">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/icon_turnover_count" />

        <TextView
            style="@style/user_setting_text_style"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/turnover_total_count" />

        <TextView
            android:id="@+id/tv_turnover_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_19"
            android:textColor="@color/color_FB9938"
            android:textSize="@dimen/dp_18" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_25">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/icon_time_count" />

        <TextView
            style="@style/user_setting_text_style"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/total_time_count" />

        <TextView
            android:id="@+id/tv_time_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_19"
            android:textColor="@color/color_FB9938"
            android:textSize="@dimen/dp_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_25">

        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/icon_order_count" />

        <TextView
            style="@style/user_setting_text_style"
            android:layout_marginLeft="@dimen/dp_9"
            android:text="@string/order_total_money" />

        <TextView
            android:id="@+id/tv_order_money_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_19"
            android:textColor="@color/color_FB9938"
            android:textSize="@dimen/dp_18" />

    </LinearLayout>

</LinearLayout>